Basic merging configuration in normalize module